<?xml version="1.0" encoding="utf-8"?>
<!--Name: Ralph Lawrence G Tongol
    Student No: 300893239
    Section: 002 -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Ralph.RalphFragment">

    <TextView
        android:id="@+id/ralphFragment1Txtbox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="Ralph Lawrence Tongol - S300893239"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ralphFragment1Canvas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />

    <ralph.tongol.s300893239.ui.Ralph.CanvasView
        android:id="@+id/ralphFragment1Canvas"
        android:layout_width="409dp"
        android:layout_height="325dp"
        android:layout_marginStart="43dp"
        android:background="@drawable/android"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <RadioGroup
        android:id="@+id/ralphColourRadioGrp"
        android:layout_width="102dp"
        android:layout_height="91dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.696">

        <RadioButton
            android:id="@+id/ralphRadioBtnBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:text="@string/blue" />

        <RadioButton
            android:id="@+id/ralphRadioBtnRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:text="@string/red" />

        <RadioButton
            android:id="@+id/ralphRadioBtnBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:text="@string/black" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/ralphSizeRadioGrp"
        android:layout_width="115dp"
        android:layout_height="98dp"
        android:layout_marginStart="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704">

        <RadioButton
            android:id="@+id/ralphRadioBtnSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:text="@string/small" />

        <RadioButton
            android:id="@+id/ralphRadioBtnMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/ralphRadioBtnLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:text="@string/large" />
    </RadioGroup>

    <Button
        android:id="@+id/ralphClrBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.825" />

    <Button
        android:id="@+id/ralphPenBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_pen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

</androidx.constraintlayout.widget.ConstraintLayout>